[package]
name = "identity_cli"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
cryptoxide = "0.1.1"
base64 = "0.10.1"
rpassword = "3.0.2"
chain-addr = { path = "../chain-libs/chain-addr" }
chain-crypto = { path = "../chain-libs/chain-crypto" }
