[package]
name = "jolt_crypto"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
rand_chacha = "0.1"
rand_core = "0.3"
getrandom = { version = "0.1.6", features = [ "stdweb" ] }
clear_on_drop = { version = "0.2", features = ["no_cc"] }
serde = { version = "1.0", features = ["derive"] }
cryptoxide = "0.1.1"
base64 = "0.10.1"
